# qt-programming-2025-master

./: .gitignore  CMakeLists.txt
assets/: assets.qrc
src/: MyGame.cpp  MyGame.h
src/Items/: FallingItem.cpp  FallingItem.h  Item.cpp  Item.h  Mountable.cpp  Mountable.h
src/Items/Bar/: HealthBar.cpp  HealthBar.h  WeaponBar.cpp  WeaponBar.h
src/Items/Characters/: Character.cpp  Character.h  Link.cpp  Link.h
src/Items/Equipments/: Adrenaline.cpp  Adrenaline.h  Bandage.cpp  Bandage.h  Equipment.cpp  Equipment.h  MedKit.cpp  MedKit.h
src/Items/HealthBar/: HealthBar.cpp  HealthBar.h
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h  Platform.cpp  Platform.h
src/Items/Weapons/: Fist.cpp  Fist.h  Knife.cpp  Knife.h  Rifle.cpp  Rifle.h  Sniper.cpp  Sniper.h  SolidBall.cpp  SolidBall.h  Weapon.cpp  Weapon.h
src/Scenes/: BattleScene.cpp  BattleScene.h  Scene.cpp  Scene.h
